--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fabric": "^5.3.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
