--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
