--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
     "fabric": "^5.3.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.1",
