--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/fabric": "^5.3.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
