--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.32.0",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "next": "14.2.1",
