--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.32.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.8",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.1",
     "next-router-mock": "^0.9.13",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "terser-webpack-plugin": "^5.3.10",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
