--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.32.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.8",
+    "clipboard": "^2.0.11",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.1",
