--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.11",
     "axios": "^1.6.8",
     "clipboard": "^2.0.11",
     "css-minimizer-webpack-plugin": "^7.0.0",
