--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'"
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'",
+    "test": "jest"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "fabric": "^5.3.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
